--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
 /node_modules
@@ -9,10 +8,11 @@
 /coverage
 
 # production
-/build
+# /build
 
 # misc
 .DS_Store
+.env
 .env.local
 .env.development.local
 .env.test.local
