--- a/package.json
+++ b/package.json
@@ -1,19 +1,39 @@
 {
   "name": "financial-management-frontend",
   "version": "0.1.0",
+  "proxy": "http://localhost:3000 --port 3001 --port 3002",
   "private": true,
   "dependencies": {
+    "@nivo/line": "^0.83.0",
+    "@nivo/pie": "^0.83.0",
+    "@reduxjs/toolkit": "^1.9.5",
+    "@tanstack/react-query": "^4.33.0",
+    "@tanstack/react-query-devtools": "^4.33.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "chart.js": "^4.4.0",
+    "crypto-browserify": "^3.12.0",
+    "framer-motion": "^10.16.4",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
+    "react-redux": "^8.1.2",
+    "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "react-table-ui": "^0.1.6",
+    "react-toastify": "^9.1.3",
+    "redux-persist": "^6.0.0",
+    "stream-browserify": "^3.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "set WEBPACK_CONFIG=./webpack.config.js&& react-scripts start --proxy http://localhost:3002 --port 3000 --port 3001",
+    "build": "GENERATE_SOURCEMAP=false react-scripts build && cp vercel.json build/",
+    "winBuild": "set \"GENERATE_SOURCEMAP=false\" && react-scripts build && copy vercel.json build\\",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -34,5 +54,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
